src/style.css
@tailwind base;
@tailwind components;
@tailwind utilities;

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

@font-face {
    font-family: 'dana';
    src: url(../Assets/Font/dana-regular.ttf);
}

html {
    scroll-behavior: smooth;
}

body {
    font-family: 'dana';
}


.show-menu {
    transform: translateX(0%);
}

section {
    scroll-margin-top: 8rem;
}

.projects,
.contact-methods {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
    column-gap: 1rem;
    row-gap: 1rem;
}

.contact-methods {
    grid-template-columns: repeat(2, minmax(100px, 1fr));
}

.project {
    transition: transform 250ms 200ms;
}

.project:hover {
    transform: scale(1.1) !important;
}

.project-title {
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    text-align: center;
    align-content: center;
    background-color: rgb(16, 83, 16);
    height: 1.7rem;
    box-shadow: 0 -1px 4px gray;
    color: #F8FAFC;
}


.projects:hover>.project:not(:hover) {
    filter: blur(1px);
    transform: scale(0.9) !important;
}

.contact-methods {
    margin-top: 3rem;
}

.filter-hover {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    row-gap: .3rem;
    position: absolute;
    top: 50%;
    left: 50%;
    width: 0;
    height: 0;
    transform: translate(-50%, -50%) scale(0) rotate(90deg);
    backdrop-filter: blur(2px);
    background-color: rgba(000, 000, 000, .5);
    transition-property: all;
    transition-duration: 250ms;
    transition-delay: 200ms;
    align-content: center;
    text-align: center;
    z-index: 10;
    padding-inline: 1rem;
}

.project-desc {
    color: #F8FAFC;
    font-size: 1rem;
}

.project-tools {
    display: flex;
    justify-content: center;
    column-gap: .5rem;
}

.project-tool {
    color: #F8FAFC;
    background-color: rgb(16, 83, 16);
    padding-inline: .6rem;
    padding-block: .2rem;
    border-radius: .5rem;
    align-content: center;
    font-size: .8rem;
}

.project-link {
    background-color: #4F46E5;
    color: #F8FAFC;
    padding-inline: 1rem;
    border-radius: .5rem;

}

.project:hover>.filter-hover {
    width: 100%;
    height: 100%;
    transform: translate(-50%, -50%) scale(1) rotate(0deg);
}

.show {
    display: block;
    backdrop-filter: blur(3px);
}

@media screen and (min-width: 860px) {

    .projects,
    .contact-methods {
        grid-template-columns: repeat(3, minmax(250px, 1fr));
    }

}

